# astro-explorer

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  start.sh
backend/: main.py  pyproject.toml
frontend/src/: App.css  App.tsx
