[project]
name = "astro-explorer-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "fastapi>=0.136.0",
    "numpy>=2.4.4",
    "photutils>=3.0.0",
    "pillow>=12.2.0",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "scikit-image>=0.25.0",
    "uvicorn[standard]>=0.44.0",
]
